@@ -1,19 +1,18 @@
 package com.sparta.backoffice.global.util;
 
-import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
 
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
 import com.sparta.backoffice.auth.dto.TokenDto;
 import com.sparta.backoffice.global.properties.JwtProperties;
 import com.sparta.backoffice.user.constant.UserRoleEnum;
-import com.sparta.backoffice.user.entity.User;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
@@ -27,9 +26,10 @@ import jakarta.annotation.PostConstruct;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
+@Getter
 @Slf4j(topic = "Jwt 유틸")
 @RequiredArgsConstructor
 @Component
@@ -39,7 +39,7 @@ public class JwtProvider {
 	private static final String AUTHORIZATION_HEADER = "Authorization";
 	private static final String REFRESH_TOKEN_HEADER = "RefreshToken";
 	// 사용자 권한 값의 KEY
-	private final SignatureAlgorithm signatureAlgorithm = SignatureAlgorithm.HS256;
+	private static final SignatureAlgorithm SIGNATURE_ALGORITHM = SignatureAlgorithm.HS256;
 	private final JwtProperties jwtProperties;
 	private String secretKey;
 	private String adminKey;
@@ -65,10 +65,10 @@ public class JwtProvider {
 			return null;
 		}
 
-		return subStringToken(tokenValue);
+		return substringToken(tokenValue);
 	}
 
-	private String subStringToken(String tokenValue) {
+	private String substringToken(String tokenValue) {
 		if (StringUtils.hasText(tokenValue) && tokenValue.startsWith(BEARER_PREFIX)) {
 			return tokenValue.substring(7);
 		}
@@ -96,35 +96,33 @@ public class JwtProvider {
 	// 토큰에서 사용자 정보 Claim 가져오기
 	public Claims getUserInfoFromToken(String token) {
 		return Jwts.parserBuilder()
-				.setSigningKey(key)
-				.build()
-				.parseClaimsJws(token)
-				.getBody();
+			.setSigningKey(key)
+			.build()
+			.parseClaimsJws(token)
+			.getBody();
 	}
 
 	//토큰 생성
-	public TokenDto createToken(User user) {
+	public TokenDto createToken(String username, UserRoleEnum role) {
 		Date date = new Date();
-		String username = user.getUsername();
-		UserRoleEnum role = user.getRole();
 
 		String accessToken =
-				Jwts.builder()
-						.setSubject(username) // 사용자 식별자값(ID)
-						.claim(AUTHORIZATION_KEY, role) // 사용자 권한
-						.setExpiration(new Date(date.getTime() + accessTokenExpiration)) // 만료 시간
-						.setIssuedAt(date) // 발급일
-						.signWith(key, signatureAlgorithm) // 암호화 알고리즘
-						.compact();
+			Jwts.builder()
+				.setSubject(username) // 사용자 식별자값(ID)
+				.claim(AUTHORIZATION_KEY, role) // 사용자 권한
+				.setExpiration(new Date(date.getTime() + accessTokenExpiration)) // 만료 시간
+				.setIssuedAt(date) // 발급일
+				.signWith(key, SIGNATURE_ALGORITHM) // 암호화 알고리즘
+				.compact();
 
 		String refreshToken =
-				Jwts.builder()
-						.setSubject(username) // 사용자 식별자값(ID)
-						.claim(AUTHORIZATION_KEY, role) // 사용자 권한
-						.setExpiration(new Date(date.getTime() + refreshTokenExpiration)) // 만료 시간
-						.setIssuedAt(date) // 발급일
-						.signWith(key, signatureAlgorithm) // 암호화 알고리즘
-						.compact();
+			Jwts.builder()
+				.setSubject(username) // 사용자 식별자값(ID)
+				.claim(AUTHORIZATION_KEY, role) // 사용자 권한
+				.setExpiration(new Date(date.getTime() + refreshTokenExpiration)) // 만료 시간
+				.setIssuedAt(date) // 발급일
+				.signWith(key, SIGNATURE_ALGORITHM) // 암호화 알고리즘
+				.compact();
 
 		return TokenDto.of(accessToken, refreshToken);
 	}
@@ -135,26 +133,34 @@ public class JwtProvider {
 	}
 
 	private void setCookieRefreshToken(String refreshToken, HttpServletResponse response) {
-		try {
-			refreshToken = URLEncoder.encode(BEARER_PREFIX + refreshToken, "utf-8").replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
+		refreshToken = URLEncoder.encode(BEARER_PREFIX + refreshToken, StandardCharsets.UTF_8).replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
 
-			Cookie cookie = new Cookie(REFRESH_TOKEN_HEADER, refreshToken); // Name-Value
-			cookie.setSecure(true);
-			cookie.setHttpOnly(true);
-			cookie.setPath("/");
+		Cookie cookie = new Cookie(REFRESH_TOKEN_HEADER, refreshToken); // Name-Value
+		cookie.setSecure(true);
+		cookie.setHttpOnly(true);
+		cookie.setPath("/");
 
-			// Response 객체에 Cookie 추가
-			response.addCookie(cookie);
-		} catch (UnsupportedEncodingException e) {
-			log.error(e.getMessage());
-		}
+		// Response 객체에 Cookie 추가
+		response.addCookie(cookie);
 	}
 
 	private void setHeaderAccessToken(String accessToken, HttpServletResponse response) {
 		response.setHeader(AUTHORIZATION_HEADER, BEARER_PREFIX + accessToken);
 	}
 
-	public String getAdminKey() {
-		return adminKey;
+	public String getRefreshTokenFromCookie(HttpServletRequest request) {
+		Cookie[] cookies = request.getCookies();
+
+		if (cookies == null) {
+			return null;
+		}
+
+		String token = "";
+		for (Cookie cookie : cookies) {
+			if (cookie.getName().equals(REFRESH_TOKEN_HEADER)) {
+				token = URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8); // Encode 되어 넘어간 Value 다시 Decode
+			}
+		}
+		return substringToken(token);
 	}
 }
